# as2_platform_ardupilot

./: CMakeLists.txt  README.md  package.xml
config/: control_modes.yaml  motion_controller.yaml  pid_speed_controller.yaml  platform_config_file.yaml  platform_config_odom.yaml  platform_conflig_file.yaml  state_estimator_odom.yaml
include/as2_platform_ardupilot/: ardupilot_platform.hpp
launch/: ardupilot.launch.py
rviz/: config.rviz
src/: ardupilot_platform.cpp  ardupilot_platform_main.cpp
src/as2_platform_ardupilot/: launch.py
