<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_platform_ardupilot</name>
  <version>0.0.0</version>
  <description>Aerostack platform for ArduPilot</description>
  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>as2_core</depend>
  <depend>rclcpp</depend>

  <depend>ardupilot_msgs</depend>
  <depend>as2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs </depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
